# legion

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE_FLOW.md  BUILD_GUIDE.md  CONTRIBUTING.md  Cargo.toml  Containerfile  Containerfile.local  Dockerfile  Dockerfile.production  LICENSE  PRODUCTION_CHECKLIST.md  QUICK_DEPLOY.sh  README.md  RING_SIGNATURE_IMPLEMENTATION.md  SECURITY.md  SECURITY_FIXES.md  STORAGE_ARCHITECTURE.md  build-and-push.ps1  build-and-push.sh  build-with-podman-fix.ps1  compose.yml  deploy.sh  docker-compose.yml  fix-podman-network.ps1  health-check.sh  install.bat  install.sh  integration_test.rs  nginx.conf  redis.conf  start_redis.ps1  test_security.sh  webauthn_client.html
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  deploy-frontend.yml  docker-build.yml
crypto_constants/: Cargo.toml
crypto_constants/src/: lib.rs
docs/: API_REFERENCE.md  ARCHITECTURE_COMPARISON.md  ARCHITECTURE_FLOW.md  CRYPTOGRAPHIC_SPECIFICATION.md  DEPLOYMENT.md  DISCORD_USERNAME_SYSTEM.md  GITHUB_DEMO.md  INTEGRATION_GUIDE.md  USER_DATA_PERSISTENCE.md  WHITEPAPER.md
integration/: Cargo.toml
integration/src/: lib.rs
k8s/: backend.yaml  namespace.yaml  redis.yaml
legion-server/: Cargo.toml  Dockerfile
legion-server/src/: main.rs  webauthn_handlers.rs
prover/: Cargo.toml  Cargo_NOVA_DEPS.toml  Cargo_NOVA_FIX.toml
prover/src/: advanced_merkle.rs  application_service.rs  audit_log.rs  auth_circuit.rs  auth_circuit_tests.rs  authentication_protocol.rs  background_nova.rs  background_worker.rs  bloom_filter.rs  constraint_verifier.rs  crypto_constants.rs  crypto_helpers.rs  device_tree.rs  dilithium_verifier.rs  ecc_chip.rs  enterprise_key_manager.rs  formal_verification.rs  forward_secrecy.rs  host_wrapper.rs  http_server.rs  input_validator.rs  key_pool.rs  key_rotation.rs  lib.rs  main.rs  merkle_tree.rs  nova_accumulator.rs  nova_accumulator_disabled.rs  oracle.rs  oracle_verification.rs  parallel_processor.rs  param_integrity.rs  params_cache.rs  pillar_integration.rs  pq_auth_wrapper.rs  pq_forward_secrecy.rs  pq_signatures.rs  proof_generator.rs  recursive_prover.rs  redis_cache.rs  (+12 more)
sidecar/: .containerignore  Cargo.toml  Dockerfile  build.rs  config.toml  deploy-podman.ps1
sidecar/src/: anycast.rs  auth.rs  bls_multisig.rs  config.rs  config_manager.rs  error.rs  hardened_main.rs  hardened_server.rs  key_rotation.rs  kms.rs  lib.rs  main.rs  metrics.rs  replay.rs  scalable_server.rs  server.rs  session.rs  sharding.rs  stage_a.rs  stage_b.rs  tickets.rs  tls.rs  tls_binding.rs  types.rs  zk.rs
sidecar/src/security/: audit.rs  crypto.rs  key_management.rs  mod.rs
verifier/: Cargo.toml
verifier/src/: lib.rs  security_policies.rs  zk_auth_blueprint.rs
wasm-client/: Cargo.toml  README.md  build-atomics.ps1  build.ps1  build_simple.ps1  index.html  serve.ps1  serve.py  serve_multithread.ps1  welcome.html
wasm-client/src/: indexeddb.rs  lib.rs
