[package]
name = "legion-prover"
version = "0.1.0"
edition = "2021"

[dependencies]
# Zero-knowledge proof system
halo2_proofs = "0.3"
halo2_gadgets = "0.3"
pasta_curves = "0.5"
ff = "0.13"

# Cryptographic primitives
blake3 = "1.5"
ed25519-dalek = "2.1"
chacha20poly1305 = "0.10"
ml-kem = "0.2"
zeroize = "1.7"
rand = "0.8"
subtle = "2.4"
argon2 = "0.5"

# Async and networking
tokio = { version = "1.0", features = ["full"] }
redis = { version = "0.24", optional = true }

# Serialization and utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
anyhow = "1.0"
once_cell = "1.19"
hashbrown = "0.14"

# WASM compatibility
web-time = "1.0"
getrandom = { version = "0.2", features = ["js"] }

# Optional dependencies
raw-cpuid = { version = "11.0", optional = true }
get_if_addrs = { version = "0.5", optional = true }

[features]
default = []
redis = ["dep:redis"]
native = ["raw-cpuid", "get_if_addrs"]
hsm = []

[lib]
name = "legion_prover"
path = "prover/src/lib.rs"