[package]
name = "legion-server"
version = "0.1.0"
edition = "2021"

[features]
default = ["webauthn", "redis"]
webauthn = ["legion-prover/webauthn", "webauthn-rs", "webauthn-rs-proto"]
redis = ["dep:redis"]

[dependencies]
legion-prover = { path = "../prover", features = ["native", "redis", "webauthn"] }
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
hex = "0.4"
ff = "0.13"
chrono = "0.4"
redis = { version = "0.24", features = ["tokio-comp"], optional = true }
webauthn-rs = { version = "0.5", optional = true }
webauthn-rs-proto = { version = "0.5", optional = true }
base64 = "0.21"
p256 = { version = "0.13", features = ["ecdsa"] }
sha2 = "0.10"