[package]
name = "legion-wasm-client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]

# WASM core dependencies
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"

# WASM-compatible randomness
getrandom = { version = "0.2", features = ["js"] }

# ZK proving in WASM (single-threaded)
legion-prover = { path = "../prover", default-features = false, features = ["wasm"] }
halo2_proofs = { version = "0.3", default-features = false }
halo2_gadgets = { version = "0.3", default-features = false }
pasta_curves = { version = "0.5", default-features = false }
ff = { version = "0.13", default-features = false }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde", "js"] }
console_error_panic_hook = "0.1"
hex = "0.4"
blake3 = "1.5"
indexmap = { version = "1.9.3", features = ["std"] }
hashbrown = { version = "0.12", features = ["ahash", "inline-more"] }
idb = "0.6"

# Cryptography for session binding
argon2 = { version = "0.5", default-features = false, features = ["alloc", "password-hash"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
base64 = "0.21"
ciborium = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Event",
  # Storage
  "Storage",
  "IdbDatabase",
  "IdbFactory",
  "IdbObjectStore",
  "IdbOpenDbRequest",
  "IdbRequest",
  "IdbTransaction",
  "IdbTransactionMode",
  "IdbVersionChangeEvent",
  # Network
  "Window",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Headers",
  # Performance
  "Performance",
  "PerformanceEntry",
  # Threading (basic support)
  "Worker",
  "MessagePort",
  "MessageChannel",
  "Navigator",
]